# mangater

./: .gitignore  Cargo.toml  run_shaking_features.sh.not-work  run_udeps_tree_shaking.sh
crates/mangater-core/: Cargo.toml  README.md
crates/mangater-core/src/: lib.rs  orchestration.rs
crates/mangater-core/src/orchestration/: engine.rs  model.rs
crates/mangater-core/src/util/: config.rs
crates/mangater-core/testing/: .env-unit-test  configu-unit-test.json  configu-unit-test.json5
crates/mangater-sdk/: Cargo.toml  README.md
crates/mangater-sdk/src/: entity.rs  errors.rs  lib.rs  traits.rs  util.rs
crates/mangater-sdk/src/entity/: entity.rs  model.rs
crates/mangater-sdk/src/traits/: config.rs  domain.rs  matcher.rs  registry.rs  storage.rs
crates/mangater-sdk/src/util/: html_parsing.rs  resource.rs
crates/mangater-sdk/testdata/: resource_test_download_resource_to_file.txt  wikipedia_nosql_local.html.result.txt  wikipedia_nosql_local.html.txt  wikipedia_nosql_scrap_result.txt
crates/sites/wikipedia/: Cargo.toml
crates/sites/wikipedia/src/: lib.rs  runner.rs
crates/sites/wikipedia/src/runner/: instance.rs  model.rs
crates/sites/wikipedia/tests/: domain.rs
mangater-cli/: Cargo.toml  run_cli_help.sh  run_sample_cmd.sh  run_with_log_level.sh
mangater-cli/src/: cli.rs  cmd.rs  entity.rs  lib.rs  main.rs
mangater-cli/src/cmd/: cmd_list_domains.rs  cmd_scrap.rs
mangater-cli/src/entity/: model.rs
mangater-cli/src/util/: engine.rs
mangater-cli/testdata/: config.json5
mangater-cli/tests/: engine_registry.rs
