[package]
name = "mangater-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for Mangater - act as an example of how the Mangater eco-system works"

[features]
default = ["official-sites"]
official-sites = ["wikipedia"]
# official-sites = []
wikipedia = ["site-wikipedia"]

[dependencies]
mangater-core = { path = "../crates/mangater-core" }
mangater-sdk = { path = "../crates/mangater-sdk" }
site-wikipedia = { path = "../crates/sites/wikipedia", optional = true}


clap = { version = "^4.5.59", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = "1.0.228"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "test-util"] }
json5 = "1.3.1"
serde_json = "1.0.149"

# [todo]
# might need to have 2 binaries (1 for CLI and 1 for web-server - daemon mode)

