[package]
name = "mangater-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core domain and orchestration engine for Mangater"

[lib]
name = "mangater_core"
path = "src/lib.rs"

[dependencies]
# internal dependency
mangater-sdk = { path = "../mangater-sdk" }

async-trait = "0.1.89"
thiserror = "2.0.18"
dotenvy = "0.15.7"
url = "2.5.8"
bytes = "1.11.1"
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }


[features]
default = []
