[package]
name = "mangater-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SDK interface for Mangater"

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = [ "stream"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs"] }

[dev-dependencies]

