[package]
name = "site-wikipedia"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "wikipedia implementation for Mangater"

[dependencies]
async-trait = "0.1.89"
mangater-sdk = { path = "../../mangater-sdk" }
once_cell = "1.21.3"

regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
